Creating Req body schemas for several endpoints, creating collection controller and cart controller
